--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body{
     min-height: 100vh;
     display: grid;
+    gap: 1rem;
     place-content: center;
     background-color: rgb(36, 36, 36);
     background-image: url(./imgs/bgBody.webp);
@@ -262,21 +263,22 @@ img{
     height: 100%;
 }
 
-.img{
-    width: 100%;
-    height: 100%;
-    background-color: aqua;
-    background-image: url(/imgs/Bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 
 /* ----------- INFOS BUTTON ----------- */
 
-.infosBtn{
+.infosWrapper{
     position: absolute;
     top: 2rem;
     left: 2rem;
+    display: flex;
+    gap: .5rem;
+    align-items:flex-start;
+    /* border: 2px solid green; */
+
+}
+
+.infosBtn{
+    
     display: flex;
     align-items: center;
     gap: .7rem;
@@ -309,10 +311,57 @@ img{
     color: black;
 }
 
+.modalInfos{
+    background-color: white;
+    border-radius: .2rem;
+    width: 40%;
+}
+
 
 /* ----------- MODAL INFOS ----------- */
+.info{
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+    
+}
 
+.tag{
+    width: fit-content;
+    padding: .2rem 1rem;
+    font-weight: bold;
+    font-size: .7rem;
+    border-radius: .5rem;
+}
 
+.maintance{
+    background-color: rgba(74, 136, 177, 0.6);
+}
+
+.inform{
+    background-color: rgba(128, 128, 128, 0.6);
+}
+
+.titleInfo{
+    font-weight: bold;
+    font-size: .8rem;
+}
+
+.dateTime{
+    font-size: .5rem;
+    font-weight: bold;
+    color: #555555;
+}
+
+.descInfo{
+    font-size: .7rem;
+}
+
+hr{
+    border-top: 1px solid rgba(128, 128, 128, 0.575);
+    
+}
 
 
 /* ----------- WINDOW BUTTONS ----------- */
@@ -344,7 +393,54 @@ img{
     background-color: red;
 }
 
-/* ----------- WINDOW BUTTONS ----------- */
+/* ----------- USER BUTTON ----------- */
+.userBtn{
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    display: grid;
+    place-content: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    background-color: #0b0e1d;
+    color: #989caa;
+    border-radius: 50%;
+    transition: .3s ease;
+    cursor: pointer;
+}
+
+.userBtn:hover{
+    background-color: #383838;
+}
+
+/* ----------- USER MODAL ----------- */
+
+.modalUser{
+    position: absolute;
+    top: 5.4rem;
+    right: 2.5rem;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: #0b0e1d;
+    border-radius: .2rem    ;
+    color: #989caa;
+}
+
+.modalUser .able{
+    cursor: pointer;
+    transition: .1s ease;
+}
+
+.modalUser .able:hover{
+    color: white;
+}
+
+.disabled{
+    color: #989caa56;
+}
+
 
 
 .legalAdvise{
@@ -353,7 +449,6 @@ img{
     max-width: 50vw;
     padding: 1rem;
     text-align: center;
-    position: absolute;
     background-color: rgba(126, 126, 126, 0.493);
     color: white;
 }
